--- a/front-typescript/src/pages/game/game.styles.scss
+++ b/front-typescript/src/pages/game/game.styles.scss
@@ -1,7 +1,10 @@
 .game {
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
+   &.end {
+    z-index: 10;
+    }
   }
