--- a/front-typescript/src/components/account-info/account-info.styles.scss
+++ b/front-typescript/src/components/account-info/account-info.styles.scss
@@ -1,8 +1,15 @@
-.account-page {
+.scores {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    // flex-wrap: wrap;
+    justify-content: space-between;
+}
+.tables {
     width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     justify-content: space-between;
 }
