--- a/front-typescript/src/App.css
+++ b/front-typescript/src/App.css
@@ -37,3 +37,18 @@ a {
     color: gray;
     font-size: x-small;
 }
+
+.realAvatar {
+    /* make a square container */
+    width: 150px;
+    height: 150px;
+
+    /* fill the container, preserving aspect ratio, and cropping to fit */
+    background-size: cover;
+
+    /* center the image vertically and horizontally */
+    background-position: top center;
+
+    /* round the edges to a circle with border radius 1/2 container size */
+    border-radius: 50%;
+}
