--- a/front-typescript/src/App.scss
+++ b/front-typescript/src/App.scss
@@ -3,7 +3,8 @@ body {
   background-image: url(/assets/blob-haikei-20.svg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center; 
+  // background-position: center; 
+  background-position:  55% 170%;
 	/* background: linear-gradient(-45deg, black, darkblue, #10035a, rgb(70, 4, 4));
 	background-size: 400% 400%;
 	animation: gradient 7s ease infinite; */
