--- a/front-typescript/src/pages/users/components/friend.styles.scss
+++ b/front-typescript/src/pages/users/components/friend.styles.scss
@@ -5,3 +5,15 @@
     // flex-wrap: wrap;
     justify-content: space-between;
 }
+
+.image {
+    position: static;
+    height: 30px;
+    width: 30px;
+    max-height: 50%;
+    max-width: 50%;
+    background-size: cover;
+    background-position: center;
+    border: 2px solid white;
+    border-radius:50%;
+  }
