--- a/front-typescript/src/index.css
+++ b/front-typescript/src/index.css
@@ -1,3 +1,7 @@
+/* @tailwind base; */
+@tailwind components;
+@tailwind utilities;
+
 body {
     
 
@@ -13,3 +17,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* .menu-item {
+    font-size: 32px;
+    font-weight: 700;
+} */
