--- a/front-typescript/src/pages/chats/chats.scss
+++ b/front-typescript/src/pages/chats/chats.scss
@@ -8,3 +8,17 @@
 .composer {
     width: 100%;
 }
+
+.message-image {
+    width: 35px;
+    height: 35px;
+ 
+     /* fill the container, preserving aspect ratio, and cropping to fit */
+     background-size: cover;
+ 
+     /* center the image vertically and horizontally */
+     background-position: top center;
+ 
+     /* round the edges to a circle with border radius 1/2 container size */
+     border-radius: 50%;
+}
