--- a/front-typescript/src/pages/chats/chats.scss
+++ b/front-typescript/src/pages/chats/chats.scss
@@ -2,6 +2,7 @@
 // @tailwind components;
 // @tailwind utilities;
 
+
 .admin-panel {
 
 }
@@ -22,3 +23,31 @@
      /* round the edges to a circle with border radius 1/2 container size */
      border-radius: 50%;
 }
+
+.tooltip {
+    visibility: visible;
+    // position: relative;
+    // display: inline-block;
+    // border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  }
+
+   /* Tooltip text */
+   .tooltip .tooltiptext {
+    visibility: hidden;
+    // width: 500px;
+    min-width: 100px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 5px 30px;
+    border-radius: 6px;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
