css done for the buttons offlinegmae

--- a/front-typescript/src/pages/offline-game/offline-game.styles.scss
+++ b/front-typescript/src/pages/offline-game/offline-game.styles.scss
@@ -1,6 +1,6 @@
 .game {
     position: absolute;
-    top: 50%;
+    top: 400px;
     left: 50%;
     text-align: center;
     /* bring your own prefixes */
