--- a/front-typescript/src/components/maps-chooser/maps-chooser.scss
+++ b/front-typescript/src/components/maps-chooser/maps-chooser.scss
@@ -1,29 +1,47 @@
 .square {
-	background: #fff;
-	border: 1px solid #999;
-	float: left;
-	font-size: 24px;
-	font-weight: bold;
-	line-height: 34px;
-	height: 80px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: auto;
-	padding: 0;
-	text-align: center;
-	width: 220px;
+    min-width: 30%;
+    height: 100px;
+    border-radius: 25px;
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    margin: 0 7.5px 15px;
+    transition: transform 250ms;
   }
 
 .board-row:after {
 	clear: both;
 	content: "";
 	display:table;
+	width: 700px
 }
 
 .game-board {
 	display: inline-block;
+	width: 100%;
+	max-width: 800px;
 }
 
 .map-item {
 	text-align: center;
+}
+
+.button {
+    min-width: 30%;
+    height: 100px;
+    border-radius: 25px;
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    margin: 0 7.5px 15px;
+    transition: transform 250ms;
+    &:hover {
+        cursor: pointer;
+        transition: all 1s ease;
+        transform: scale(1.2);
+    }
 }
