--- a/front-typescript/src/pages/offline-game/offline-game.styles.scss
+++ b/front-typescript/src/pages/offline-game/offline-game.styles.scss
@@ -1,10 +1,10 @@
-.game {
-    position: absolute;
-    top: 400px;
+.gameoffline {
+    position: relative;
+    margin-top: 30px;
     left: 50%;
     text-align: center;
     /* bring your own prefixes */
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
    &.end {
     z-index: 10;
     text-align: center;
