Scale online game

--- a/front-typescript/src/pages/game/game.styles.scss
+++ b/front-typescript/src/pages/game/game.styles.scss
@@ -97,3 +97,14 @@
     }
   }
   
+.end-header {
+    font-size: 7vw;
+}
+
+.end-text {
+    font-size: 1vw !important;
+}
+
+.end-button {
+    font-size: 3vw !important;
+}
