added css for gamesettings and offline

--- a/front-typescript/src/pages/game-settings/settingsButton.scss
+++ b/front-typescript/src/pages/game-settings/settingsButton.scss
@@ -12,6 +12,10 @@
     background: #fff;
   }
 
+.chosen-settings {
+  background: grey;
+}
+
 .game-board-settings {
 	display: inline-block;
 	width: 100%;
