--- a/front-typescript/src/pages/offline-game/offline-game.styles.scss
+++ b/front-typescript/src/pages/offline-game/offline-game.styles.scss
@@ -30,6 +30,10 @@
     justify-content: space-between;
   }
 
+.border-custom
+{
+  display: inline-block;
+}
 
 .lds-ripple {
     display: inline-block;
