--- a/front-typescript/src/App.scss
+++ b/front-typescript/src/App.scss
@@ -67,3 +67,7 @@ a {
     /* round the edges to a circle with border radius 1/2 container size */
     border-radius: 50%;
 }
+
+.font-ok {
+    font-family: sans-serif;
+}
