Fix end game font

--- a/front-typescript/src/pages/game/game.styles.scss
+++ b/front-typescript/src/pages/game/game.styles.scss
@@ -16,7 +16,7 @@
         padding: 0!important;
         text-align: center;
         font-family: 'Anton';
-        font-size: medium;
+        // font-size: medium;
         color: white;
         cursor: pointer;
       }
