Fix modal styles

--- a/front-typescript/src/components/modal/modal.styles.scss
+++ b/front-typescript/src/components/modal/modal.styles.scss
@@ -10,7 +10,7 @@
   .modal-main {
     position:fixed;
     background: white;
-    width: 20%;
+    // width: 20%;
     height: auto;
     top:30%;
     left:50%;
