--- a/srcs/front-typescript/src/components/menu-item/menu-item.styles.scss
+++ b/srcs/front-typescript/src/components/menu-item/menu-item.styles.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid white;
+    // border: 1px white;
     margin: 0 7.5px 15px;
     transition: transform 250ms;
     &:hover {
